Fixed text shadow on mobile

--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ button:hover {
 		gap: 0.25rem;
 	}
 	#buttons button {
-		text-shadow: 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
+		/* text-shadow: 0.3rem 0.3rem rgba(0, 0, 0, 0.5); */
 	}
 	#OK {
 		font-size: 2rem;
